--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -28,6 +28,49 @@
     },
     {
       "cell_type": "markdown",
+      "id": "ed497d02",
+      "metadata": {},
+      "source": [
+        "2. Here is a table summarizing the data collected from the Occupational Outlook Handbook for various jobs:\n",
+        "| Occupation                                       | Median Salary (USD) | Typical Education Required               | Job Outlook (2024–2034)                  | Work Setting                                   |\n",
+        "| ------------------------------------------------ | ------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------------- |\n",
+        "| Data Scientist                                   | $112,590            | Bachelor’s degree (often Master’s)       | 34% growth (much faster than average)    | Offices; tech, finance, healthcare, government |\n",
+        "| Information Security Analyst                     | $124,910            | Bachelor’s degree + certifications       | 29% growth (much faster than average)    | Tech firms; finance; consulting; government    |\n",
+        "| Computer & Information Systems Manager           | $171,200            | Bachelor’s degree + extensive experience | 15% growth (faster than average)         | Corporate offices; IT departments              |\n",
+        "| Computer & Information Research Scientist        | $140,910            | Bachelor’s degree (often Master’s/PhD)   | 20% growth (much faster than average)    | Research labs; universities; tech firms        |\n",
+        "| Computer Systems Analyst                         | $103,790            | Bachelor’s degree                        | 9% growth (average)                      | Business and IT office environments            |\n",
+        "| Compensation, Benefits & Job Analysis Specialist | $140,030            | Bachelor’s degree                        | **Uncertain fact** (varies by specialty) | Corporate HR departments                       |\n",
+        "| Human Resources Specialist                       | $72,910             | Bachelor’s degree                        | **Uncertain fact** (average growth)      | Office settings; HR departments                |\n",
+        "| Training & Development Specialist                | $65,850             | Bachelor’s degree                        | 11% growth (much faster than average)    | Corporate training offices; education settings |\n",
+        "| Computer Support Specialist                      | $61,550             | Some college or associate degree         | Slow or no growth                        | IT help desks; office environments             |\n",
+        "| Network & Computer Systems Administrator         | **Uncertain fact**  | Bachelor’s degree                        | Decline projected                        | Offices; data centers                          |\n",
+        "\n",
+        "3. Yes. I was surprised by how large the differences in job growth are within technology related careers. While roles such as data scientist and information security analyst are projected to grow much faster than average, some traditional IT positions, like network and computer systems administrator are expected to decline despite also being technology focused. Before looking closely at these jobs, I had a general sense that all technology related jobs would grow steadily. I was also surprised that certain business roles, such as compensation and benefits specialists, can earn salaries comparable to highly technical jobs.\n",
+        "\n",
+        "4. When ranking these jobs, I prioritized salary, job outlook, and work life balance. Here is my ranking from best to worst:\n",
+        "   1. Computer & Information Systems Manager – Ranked highest because it offers the highest median salary and strong job growth, along with leadership responsibilities and long-term career stability.\n",
+        "\n",
+        "    2. Information Security Analyst – High demand and very fast job growth due to increasing cybersecurity threats, combined with a strong salary.\n",
+        "\n",
+        "    3. Computer & Information Research Scientist – High pay and strong growth, with opportunities to work on advanced and innovative technologies.\n",
+        "\n",
+        "    4. Data Scientist – Excellent job growth and strong salary, with broad applicability across many industries.\n",
+        "\n",
+        "    5. Compensation, Benefits & Job Analysis Specialist – High salary and business impact, though job growth is less clearly defined.\n",
+        "\n",
+        "    6. Computer Systems Analyst – Stable career with solid pay and consistent demand across organizations.\n",
+        "\n",
+        "    7. Human Resources Specialist – Steady demand and important organizational role, but lower salary compared to higher-ranked jobs.\n",
+        "\n",
+        "    8. Training & Development Specialist – Good job growth and meaningful work, but comparatively lower pay.\n",
+        "\n",
+        "    9. Computer Support Specialist – Lower salary and slower job growth, despite being essential for daily operations.\n",
+        "\n",
+        "    10. Network & Computer Systems Administrator – Ranked lowest due to a projected decline in employment opportunities."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "7e9d65ad-3740-43d3-a944-b3653fbeb80c",
       "metadata": {
         "id": "7e9d65ad-3740-43d3-a944-b3653fbeb80c"
@@ -75,7 +118,55 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Parts 1 to 4\n",
+        "x = np.linspace(0,1,50)\n",
+        "y = np.log(x)\n",
+        "z = np.exp(x)\n",
+        "plt.scatter(x,y)\n",
+        "plt.scatter(x,z)\n",
+        "plt.show()\n",
+        "\n",
+        "# Parts 6, 7\n",
+        "x = np.linspace(0,1,50)\n",
+        "y = np.log(x)\n",
+        "z = np.exp(x)\n",
+        "plt.scatter(x,y, label ='Natural Log')\n",
+        "plt.scatter(x,z, label='Exponential')\n",
+        "plt.xlabel(\"X\")\n",
+        "plt.ylabel(\"Y\")\n",
+        "plt.legend(loc='lower right')\n",
+        "plt.title('Natural Log and Exponential Functions')\n",
+        "plt.show()\n",
+        "\n",
+        "# Parts 8, 9\n",
+        "x = np.linspace(-6.5,6.5,100)\n",
+        "y = np.sin(x)\n",
+        "z = np.cos(x)\n",
+        "plt.scatter(x,y)\n",
+        "plt.scatter(x,z)\n",
+        "plt.show()\n",
+        "\n",
+        "# Part 11\n",
+        "x = np.linspace(-6.5,6.5,100)\n",
+        "y = np.sin(x)\n",
+        "z = np.cos(x)\n",
+        "plt.plot(x,y, label ='Sine')\n",
+        "plt.plot(x,z, label='Cosine')\n",
+        "plt.show()\n",
+        "\n",
+        "# Part 12\n",
+        "x = np.linspace(-6.5,6.5,100)\n",
+        "y = np.sin(x)\n",
+        "z = np.cos(x)\n",
+        "plt.plot(x,y, label ='Sine')\n",
+        "plt.plot(x,z, label='Cosine')\n",
+        "plt.xlabel(\"X\")\n",
+        "plt.ylabel(\"Y\")\n",
+        "plt.legend(loc='lower left')\n",
+        "plt.title('Sine and Cosine')\n",
+        "plt.show()"
       ]
     },
     {
@@ -181,6 +272,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -197,9 +291,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.4"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
